# azsync

./: .gitattributes  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yaml  dependencies.yaml  release.yaml
src/: app.rs  cli.rs  commands.rs  dotenv.rs  main.rs  sync.rs
src/cli/: app.rs  blobs.rs  completions.rs  dotenv.rs  env_url.rs  file.blob_name.txt  file.rs  global.rs  key_vault.rs  maybe_env.rs  storage.rs  sync.rs
src/commands/: command.rs  completions.rs  dotenv.rs  file.rs  key_vault_options.rs  macros.rs
src/dotenv/: expand.rs  file.rs  parse.rs  unescape.rs
src/dotenv/tests/: comments.env  expansion.env  expansion.replaced.env  export.env  simple.env  simple.replaced.env
src/grammars/: dotenv.pest
