[package]
name = "azsync"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

description = "Quickly synchronize local secrets with Azure"
readme = "README.md"
repository = "https://github.com/chkinney/azsync"
categories = ["command-line-utilities", "development-tools"]
keywords = ["azure", "keyvault", "secrets", "dotenv", "env"]

[dependencies]
anyhow = "1.0.99"
azure_identity = { version = "0.27.0", features = ["reqwest_rustls", "tokio"] }
azure_security_keyvault_secrets = "0.6.0"
clap = { version = "4.5.45", features = ["derive"] }
clap-cargo = "0.16.0"
clap_complete = "4.5.57"
clap_complete_nushell = "4.5.8"
futures = "0.3.31"
pest = "2.8.1"
pest_derive = "2.8.1"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.6"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

enum_variant_names = "allow"
needless_pass_by_value = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true

[dev-dependencies]
pretty_assertions = "1.4.1"
test-case = "3.3.1"
